sdk/c/weaveffi.h

// Generated by WeaveFFI 0.4.0 from image.yml
// DO NOT EDIT — your changes will be overwritten.
// To regenerate: weaveffi generate image.yml -o <out>

#ifndef WEAVEFFI_H
#define WEAVEFFI_H

#include <stdint.h>
#include <stddef.h>
#include <stdbool.h>

#ifdef __cplusplus
extern "C" {
#endif

typedef uint64_t weaveffi_handle_t;

typedef struct weaveffi_error { int32_t code; const char* message; } weaveffi_error;

void weaveffi_error_clear(weaveffi_error* err);
void weaveffi_free_string(const char* ptr);
void weaveffi_free_bytes(uint8_t* ptr, size_t len);

typedef struct weaveffi_cancel_token weaveffi_cancel_token;
weaveffi_cancel_token* weaveffi_cancel_token_create(void);
void weaveffi_cancel_token_cancel(weaveffi_cancel_token* token);
bool weaveffi_cancel_token_is_cancelled(const weaveffi_cancel_token* token);
void weaveffi_cancel_token_destroy(weaveffi_cancel_token* token);

/*
 * Map convention: Maps are passed as parallel arrays of keys and values.
 * A map parameter {K:V} named "m" expands to:
 *   const K* m_keys, const V* m_values, size_t m_len
 * A map return value expands to out-parameters:
 *   K* out_keys, V* out_values, size_t* out_len
 */

// Module: image
/** Encoded image container. */
typedef enum { weaveffi_image_ImageFormat_Png = 0, weaveffi_image_ImageFormat_Jpeg = 1, weaveffi_image_ImageFormat_Webp = 2, weaveffi_image_ImageFormat_Gif = 3 } weaveffi_image_ImageFormat;
/** Operation discriminator. See Operation for which fields each kind requires. */
typedef enum { weaveffi_image_OpKind_Resize = 0, weaveffi_image_OpKind_Crop = 1, weaveffi_image_OpKind_Rotate = 2, weaveffi_image_OpKind_Blur = 3, weaveffi_image_OpKind_Grayscale = 4 } weaveffi_image_OpKind;
/**
 * Single image operation. Build with the resize/crop/rotate/blur/grayscale
 * factory functions; pass a list to process(). Fields used per kind:
 *   Resize    : width, height
 *   Crop      : x, y, width, height
 *   Rotate    : degrees (clockwise, in degrees)
 *   Blur      : sigma   (Gaussian sigma, in pixels)
 *   Grayscale : (none)
 * Unused fields are null.
 */
typedef struct weaveffi_image_Operation weaveffi_image_Operation;
weaveffi_image_Operation* weaveffi_image_Operation_create(weaveffi_image_OpKind kind, const uint32_t* width, const uint32_t* height, const uint32_t* x, const uint32_t* y, const double* degrees, const double* sigma, weaveffi_error* out_err);
void weaveffi_image_Operation_destroy(weaveffi_image_Operation* ptr);
weaveffi_image_OpKind weaveffi_image_Operation_get_kind(const weaveffi_image_Operation* ptr);
uint32_t* weaveffi_image_Operation_get_width(const weaveffi_image_Operation* ptr);
uint32_t* weaveffi_image_Operation_get_height(const weaveffi_image_Operation* ptr);
uint32_t* weaveffi_image_Operation_get_x(const weaveffi_image_Operation* ptr);
uint32_t* weaveffi_image_Operation_get_y(const weaveffi_image_Operation* ptr);
double* weaveffi_image_Operation_get_degrees(const weaveffi_image_Operation* ptr);
double* weaveffi_image_Operation_get_sigma(const weaveffi_image_Operation* ptr);

/** Decoded image header information. */
typedef struct weaveffi_image_ImageInfo weaveffi_image_ImageInfo;
weaveffi_image_ImageInfo* weaveffi_image_ImageInfo_create(uint32_t width, uint32_t height, weaveffi_image_ImageFormat format, weaveffi_error* out_err);
void weaveffi_image_ImageInfo_destroy(weaveffi_image_ImageInfo* ptr);
uint32_t weaveffi_image_ImageInfo_get_width(const weaveffi_image_ImageInfo* ptr);
uint32_t weaveffi_image_ImageInfo_get_height(const weaveffi_image_ImageInfo* ptr);
weaveffi_image_ImageFormat weaveffi_image_ImageInfo_get_format(const weaveffi_image_ImageInfo* ptr);

/** Build a Resize operation. */
weaveffi_image_Operation* weaveffi_image_resize(uint32_t width, uint32_t height, weaveffi_error* out_err);
/** Build a Crop operation (x,y is the top-left corner). */
weaveffi_image_Operation* weaveffi_image_crop(uint32_t x, uint32_t y, uint32_t width, uint32_t height, weaveffi_error* out_err);
/** Build a Rotate operation (degrees clockwise). */
weaveffi_image_Operation* weaveffi_image_rotate(double degrees, weaveffi_error* out_err);
/** Build a Gaussian Blur operation (sigma in pixels). */
weaveffi_image_Operation* weaveffi_image_blur(double sigma, weaveffi_error* out_err);
/** Build a Grayscale operation. */
weaveffi_image_Operation* weaveffi_image_grayscale(weaveffi_error* out_err);
/** Apply ops in order, encode in out_format, return bytes. */
const uint8_t* weaveffi_image_process(const uint8_t* input_ptr, size_t input_len, weaveffi_image_Operation* const* ops, size_t ops_len, weaveffi_image_ImageFormat out_format, size_t* out_len, weaveffi_error* out_err);
/** Decode the header only and return dimensions plus detected format. */
weaveffi_image_ImageInfo* weaveffi_image_probe(const uint8_t* input_ptr, size_t input_len, weaveffi_error* out_err);


#ifdef __cplusplus
}
#endif

#endif // WEAVEFFI_H

// END weaveffi.h