sdk/python/weaveffi/weaveffi.py

# Generated by WeaveFFI 0.4.0 from image.yml
# DO NOT EDIT — your changes will be overwritten.
# To regenerate: weaveffi generate image.yml -o <out>

"""WeaveFFI Python ctypes bindings (auto-generated)"""
import contextlib
import ctypes
import platform
from enum import IntEnum
from typing import Dict, Iterator, List, Optional


class WeaveffiError(Exception):
    def __init__(self, code: int, message: str) -> None:
        self.code = code
        self.message = message
        super().__init__(f"({code}) {message}")


class _WeaveffiErrorStruct(ctypes.Structure):
    _fields_ = [
        ("code", ctypes.c_int32),
        ("message", ctypes.c_char_p),
    ]


def _load_library() -> ctypes.CDLL:
    system = platform.system()
    if system == "Darwin":
        name = "libweaveffi.dylib"
    elif system == "Windows":
        name = "weaveffi.dll"
    else:
        name = "libweaveffi.so"
    return ctypes.CDLL(name)


_lib = _load_library()
_lib.weaveffi_error_clear.argtypes = [ctypes.POINTER(_WeaveffiErrorStruct)]
_lib.weaveffi_error_clear.restype = None
_lib.weaveffi_free_string.argtypes = [ctypes.c_char_p]
_lib.weaveffi_free_string.restype = None
_lib.weaveffi_free_bytes.argtypes = [ctypes.POINTER(ctypes.c_uint8), ctypes.c_size_t]
_lib.weaveffi_free_bytes.restype = None


def _check_error(err: _WeaveffiErrorStruct) -> None:
    if err.code != 0:
        code = err.code
        message = err.message.decode("utf-8") if err.message else ""
        _lib.weaveffi_error_clear(ctypes.byref(err))
        raise WeaveffiError(code, message)


class _PointerGuard(contextlib.AbstractContextManager):
    def __init__(self, ptr, free_fn) -> None:
        self.ptr = ptr
        self._free_fn = free_fn

    def __exit__(self, *exc) -> bool:
        if self.ptr is not None:
            self._free_fn(self.ptr)
            self.ptr = None
        return False


def _string_to_bytes(s: Optional[str]) -> Optional[bytes]:
    if s is None:
        return None
    return s.encode("utf-8")


def _bytes_to_string(ptr) -> Optional[str]:
    if ptr is None:
        return None
    return ptr.decode("utf-8")


# === Module: image ===

class ImageFormat(IntEnum):
    """Encoded image container."""
    Png = 0
    Jpeg = 1
    Webp = 2
    Gif = 3


class OpKind(IntEnum):
    """Operation discriminator. See Operation for which fields each kind requires."""
    Resize = 0
    Crop = 1
    Rotate = 2
    Blur = 3
    Grayscale = 4


class Operation:
    """
    Single image operation. Build with the resize/crop/rotate/blur/grayscale
    factory functions; pass a list to process(). Fields used per kind:
      Resize    : width, height
      Crop      : x, y, width, height
      Rotate    : degrees (clockwise, in degrees)
      Blur      : sigma   (Gaussian sigma, in pixels)
      Grayscale : (none)
    Unused fields are null.
    """

    def __init__(self, _ptr: int) -> None:
        self._ptr = _ptr

    def __del__(self) -> None:
        if self._ptr is not None:
            _lib.weaveffi_image_Operation_destroy.argtypes = [ctypes.c_void_p]
            _lib.weaveffi_image_Operation_destroy.restype = None
            _lib.weaveffi_image_Operation_destroy(self._ptr)
            self._ptr = None

    @property
    def kind(self) -> "OpKind":
        _fn = _lib.weaveffi_image_Operation_get_kind
        _fn.argtypes = [ctypes.c_void_p]
        _fn.restype = ctypes.c_int32
        _result = _fn(self._ptr)
        return OpKind(_result)


    @property
    def width(self) -> Optional[int]:
        _fn = _lib.weaveffi_image_Operation_get_width
        _fn.argtypes = [ctypes.c_void_p]
        _fn.restype = ctypes.POINTER(ctypes.c_uint32)
        _result = _fn(self._ptr)
        if not _result:
            return None
        return _result[0]


    @property
    def height(self) -> Optional[int]:
        _fn = _lib.weaveffi_image_Operation_get_height
        _fn.argtypes = [ctypes.c_void_p]
        _fn.restype = ctypes.POINTER(ctypes.c_uint32)
        _result = _fn(self._ptr)
        if not _result:
            return None
        return _result[0]


    @property
    def x(self) -> Optional[int]:
        _fn = _lib.weaveffi_image_Operation_get_x
        _fn.argtypes = [ctypes.c_void_p]
        _fn.restype = ctypes.POINTER(ctypes.c_uint32)
        _result = _fn(self._ptr)
        if not _result:
            return None
        return _result[0]


    @property
    def y(self) -> Optional[int]:
        _fn = _lib.weaveffi_image_Operation_get_y
        _fn.argtypes = [ctypes.c_void_p]
        _fn.restype = ctypes.POINTER(ctypes.c_uint32)
        _result = _fn(self._ptr)
        if not _result:
            return None
        return _result[0]


    @property
    def degrees(self) -> Optional[float]:
        _fn = _lib.weaveffi_image_Operation_get_degrees
        _fn.argtypes = [ctypes.c_void_p]
        _fn.restype = ctypes.POINTER(ctypes.c_double)
        _result = _fn(self._ptr)
        if not _result:
            return None
        return _result[0]


    @property
    def sigma(self) -> Optional[float]:
        _fn = _lib.weaveffi_image_Operation_get_sigma
        _fn.argtypes = [ctypes.c_void_p]
        _fn.restype = ctypes.POINTER(ctypes.c_double)
        _result = _fn(self._ptr)
        if not _result:
            return None
        return _result[0]



class ImageInfo:
    """Decoded image header information."""

    def __init__(self, _ptr: int) -> None:
        self._ptr = _ptr

    def __del__(self) -> None:
        if self._ptr is not None:
            _lib.weaveffi_image_ImageInfo_destroy.argtypes = [ctypes.c_void_p]
            _lib.weaveffi_image_ImageInfo_destroy.restype = None
            _lib.weaveffi_image_ImageInfo_destroy(self._ptr)
            self._ptr = None

    @property
    def width(self) -> int:
        _fn = _lib.weaveffi_image_ImageInfo_get_width
        _fn.argtypes = [ctypes.c_void_p]
        _fn.restype = ctypes.c_uint32
        _result = _fn(self._ptr)
        return _result


    @property
    def height(self) -> int:
        _fn = _lib.weaveffi_image_ImageInfo_get_height
        _fn.argtypes = [ctypes.c_void_p]
        _fn.restype = ctypes.c_uint32
        _result = _fn(self._ptr)
        return _result


    @property
    def format(self) -> "ImageFormat":
        _fn = _lib.weaveffi_image_ImageInfo_get_format
        _fn.argtypes = [ctypes.c_void_p]
        _fn.restype = ctypes.c_int32
        _result = _fn(self._ptr)
        return ImageFormat(_result)



def resize(width: int, height: int) -> "Operation":
    """Build a Resize operation.
    """
    _fn = _lib.weaveffi_image_resize
    _fn.argtypes = [ctypes.c_uint32, ctypes.c_uint32, ctypes.POINTER(_WeaveffiErrorStruct)]
    _fn.restype = ctypes.c_void_p
    _err = _WeaveffiErrorStruct()
    _result = _fn(width, height, ctypes.byref(_err))
    _check_error(_err)
    if _result is None:
        raise WeaveffiError(-1, "null pointer")
    return Operation(_result)


def crop(x: int, y: int, width: int, height: int) -> "Operation":
    """Build a Crop operation (x,y is the top-left corner).
    """
    _fn = _lib.weaveffi_image_crop
    _fn.argtypes = [ctypes.c_uint32, ctypes.c_uint32, ctypes.c_uint32, ctypes.c_uint32, ctypes.POINTER(_WeaveffiErrorStruct)]
    _fn.restype = ctypes.c_void_p
    _err = _WeaveffiErrorStruct()
    _result = _fn(x, y, width, height, ctypes.byref(_err))
    _check_error(_err)
    if _result is None:
        raise WeaveffiError(-1, "null pointer")
    return Operation(_result)


def rotate(degrees: float) -> "Operation":
    """Build a Rotate operation (degrees clockwise).
    """
    _fn = _lib.weaveffi_image_rotate
    _fn.argtypes = [ctypes.c_double, ctypes.POINTER(_WeaveffiErrorStruct)]
    _fn.restype = ctypes.c_void_p
    _err = _WeaveffiErrorStruct()
    _result = _fn(degrees, ctypes.byref(_err))
    _check_error(_err)
    if _result is None:
        raise WeaveffiError(-1, "null pointer")
    return Operation(_result)


def blur(sigma: float) -> "Operation":
    """Build a Gaussian Blur operation (sigma in pixels).
    """
    _fn = _lib.weaveffi_image_blur
    _fn.argtypes = [ctypes.c_double, ctypes.POINTER(_WeaveffiErrorStruct)]
    _fn.restype = ctypes.c_void_p
    _err = _WeaveffiErrorStruct()
    _result = _fn(sigma, ctypes.byref(_err))
    _check_error(_err)
    if _result is None:
        raise WeaveffiError(-1, "null pointer")
    return Operation(_result)


def grayscale() -> "Operation":
    """Build a Grayscale operation.
    """
    _fn = _lib.weaveffi_image_grayscale
    _fn.argtypes = [ctypes.POINTER(_WeaveffiErrorStruct)]
    _fn.restype = ctypes.c_void_p
    _err = _WeaveffiErrorStruct()
    _result = _fn(ctypes.byref(_err))
    _check_error(_err)
    if _result is None:
        raise WeaveffiError(-1, "null pointer")
    return Operation(_result)


def process(input: bytes, ops: List["Operation"], out_format: "ImageFormat") -> bytes:
    """Apply ops in order, encode in out_format, return bytes.
    """
    _fn = _lib.weaveffi_image_process
    _fn.argtypes = [ctypes.POINTER(ctypes.c_uint8), ctypes.c_size_t, ctypes.POINTER(ctypes.c_void_p), ctypes.c_size_t, ctypes.c_int32, ctypes.POINTER(ctypes.c_size_t), ctypes.POINTER(_WeaveffiErrorStruct)]
    _fn.restype = ctypes.POINTER(ctypes.c_uint8)
    _input_arr = (ctypes.c_uint8 * len(input))(*input)
    _ops_arr = (ctypes.c_void_p * len(ops))(*[v._ptr for v in ops])
    _err = _WeaveffiErrorStruct()
    _out_len = ctypes.c_size_t(0)
    _result = _fn(_input_arr, len(input), _ops_arr, len(ops), out_format.value, ctypes.byref(_out_len), ctypes.byref(_err))
    _check_error(_err)
    if not _result:
        return b""
    return bytes(_result[:_out_len.value])


def probe(input: bytes) -> "ImageInfo":
    """Decode the header only and return dimensions plus detected format.
    """
    _fn = _lib.weaveffi_image_probe
    _fn.argtypes = [ctypes.POINTER(ctypes.c_uint8), ctypes.c_size_t, ctypes.POINTER(_WeaveffiErrorStruct)]
    _fn.restype = ctypes.c_void_p
    _input_arr = (ctypes.c_uint8 * len(input))(*input)
    _err = _WeaveffiErrorStruct()
    _result = _fn(_input_arr, len(input), ctypes.byref(_err))
    _check_error(_err)
    if _result is None:
        raise WeaveffiError(-1, "null pointer")
    return ImageInfo(_result)

# END weaveffi.py
